<resources>
    <string name="app_name">PinCode</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bc">c</string>
    <string name="ok">OK</string>
    <string name="help_text">Введите код</string>
    <string name="pin">1567</string>
    <string name="correct_text">Правильный код</string>
    <string name="share">Поделиться</string>
    <string name="send_email">Отправить по почте</string>
    <string name="call">Позвонить</string>
    <string name="run_camera">Запустить камеру</string>
    <string name="profile_name_title">Azat Serzhanov\nazatserzhan@gmail.com</string>
    <string name="profile_photo_description">Profile Photo</string>
    <string name="phone_number">+7(777)1483565</string>
</resources>