<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/photo_azat"
        android:contentDescription="@string/profile_photo_description" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_share"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/buttonShare"
        style="@style/ButtonViewShareStyle"
        android:background="@drawable/bg_button"
        android:text="@string/share"
        app:backgroundTint="@null"/>

    <Button
        android:id="@+id/buttonEmail"
        style="@style/ButtonViewShareStyle"
        android:background="@drawable/bg_button"
        android:text="@string/send_email"
        app:backgroundTint="@null"/>

    <Button
        android:id="@+id/buttonCall"
        style="@style/ButtonViewShareStyle"
        android:background="@drawable/bg_button"
        android:text="@string/call"
        app:backgroundTint="@null"/>

    <Button
        android:id="@+id/buttonCamera"
        style="@style/ButtonViewShareStyle"
        android:background="@drawable/bg_button"
        android:text="@string/run_camera"
        app:backgroundTint="@null"/>
</LinearLayout>